--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         padding: 10px;
         border: none;
         resize: none;
-        position: fixed;
+        position: absolute;
         top: 0;
         bottom: 0;
         width: 50vw;
